# amplifier-bundle-typescript-dev

./: DESIGN-TS-VALIDATION.md  DESIGN.md  README.md
amplifier-bundle-typescript-dev/: README.md  bundle.yaml  pyproject.toml
amplifier-bundle-typescript-dev/agents/: code-intel.md  typescript-dev.md
amplifier-bundle-typescript-dev/behaviors/: typescript-dev.yaml  typescript-lsp.yaml  typescript-quality.yaml
amplifier-bundle-typescript-dev/context/: TYPESCRIPT_BEST_PRACTICES.md  typescript-dev-instructions.md  typescript-lsp.md
amplifier-bundle-typescript-dev/docs/: ROADMAP.md
amplifier-bundle-typescript-dev/examples/: combined-bundle.yaml
amplifier-bundle-typescript-dev/modules/hooks-typescript-check/: pyproject.toml
amplifier-bundle-typescript-dev/modules/hooks-typescript-check/amplifier_module_hooks_typescript_check/: __init__.py
amplifier-bundle-typescript-dev/modules/tool-typescript-check/: pyproject.toml
amplifier-bundle-typescript-dev/modules/tool-typescript-check/amplifier_module_tool_typescript_check/: __init__.py
amplifier-bundle-typescript-dev/src/amplifier_bundle_typescript_dev/: __init__.py  checker.py  config.py  models.py
amplifier-bundle-typescript-dev/tests/: test_agent_and_context.py  test_bundle_composition.py  test_checker.py  test_hook_module.py  test_tool_module.py
amplifier-bundle-typescript-dev/tests/fixtures/: eslint_output.json  prettier_check_output.txt  stub_sample.ts  tsc_errors.txt
test-typescript-validation/: VERIFICATION-REPORT.md
test-typescript-validation/.amplifier/: test-bundle.yaml
